fix contacts window column gap

--- a/css/small.css
+++ b/css/small.css
@@ -721,6 +721,7 @@ body {
     }
 
     .popup {
+        column-gap: 3rem;
         grid-template-areas:
             "popup-top popup-top"
             "call message"
